[package]
name = "pt_collector"
version = "0.1.0"
authors = ["stan0 <freespirit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.0.0"
reqwest = "0.9.19"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.40"

